# ARPPrimeAmp

./: .gitignore  Dockerfile  HYBRID.md  Proth_Hits__fast_demo__no_ARP_prefilter_.csv  README.md  ablation_metrics_N20000.json  arp_pi_ablation.py  certify.py  ecpp_integration.py  k_band_helper.py  proth_search.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
ARPPrimeAmp_with_proth/: README.md  paramsweep.py  pyproject.toml
ARPPrimeAmp_with_proth/arpprimeamp/: cli.py
ARPPrimeAmp_with_proth/examples/: demo_500.csv  proth_hits_fast.csv  proth_stats_fast.json
arpprimeamp/: __init__.py  core.py  cuda_arp.cu
examples/: proth_milestones.csv  sweep_results_2000.csv
tests/: test_basic.py
