[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arpprimeamp"
version = "0.1.0"
description = "Physics-inspired prime classifier"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
]

[project.scripts]
arpprimeamp = "arpprimeamp.cli:main"

[tool.setuptools.packages.find]
include = ["arpprimeamp"]
