[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arpprimeamp"
version = "0.1.0"
description = "ARP-Amplified Adaptive-π Prime Sieve — physics-inspired composite filter"
readme = "README.md"
authors = [{name = "Ryan McKenna"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pandas>=2.0"]

[project.scripts]
arpprimeamp = "arpprimeamp.cli:main"

[tool.setuptools]
packages = ["arpprimeamp"]
